--- a/x64/Debug/VoidGame.vcxproj
+++ b/x64/Debug/VoidGame.vcxproj
@@ -124,7 +124,7 @@
       <AdditionalIncludeDirectories>lib\SFML-2.6.2\include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
-      <SubSystem>Console</SubSystem>
+      <SubSystem>Windows</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
